Started fine alignment changes- fixed spacing between lines

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -214,12 +214,14 @@ hr {
   font-size: 20px;
   text-align: left;
   padding-left: 10px;
+  margin: 5px;
 }
 
 .offerings-info {
   font-family: 'Montserrat',sans-serif !important;
   font-size: 18px;
   text-align: left;
-  padding-bottom: 10px;
   padding-left: 10px;
+  padding-top: 5px;
+  margin: 5px;
 }
